--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                 <img src="src/images/icons/web_development.png" alt="Web Development" />
                                 <h3 class="mb-3 mt-0" style="color: black;">Web Development</h3>
                                 <p class="mb-0" style="color: black;">Create web application with admin panel and all
-                                    the latest features and costumer support.</p>
+                                    the latest features and customer support.</p>
                             </div>
                         </div>
 
@@ -480,7 +480,7 @@
                                 <div class="content">
                                     <span class="time">2017 - Present</span>
                                     <h3 class="title">Freelancing</h3>
-                                    <p>I have Excellent experience in freelancing. My first priority is costumer
+                                    <p>I have Excellent experience in freelancing. My first priority is customer
                                         satisfaction.</p>
                                 </div>
                             </div>
@@ -825,11 +825,6 @@
         });
 
     </script>
-
-
-
-
-
 
     <script src="src/js/main.js"></script>
 
